--- a/src/app/ideas/ideas.component.scss
+++ b/src/app/ideas/ideas.component.scss
@@ -7,6 +7,18 @@
     background-size: cover;
 }
 
+.mat-card-title{
+    font-size: 16px;
+}
+
+.mat-card-subtitle{
+    font-size: 12px;
+}
+
+.rating{
+    color: rgb(0, 117, 59);
+}
+
 .mat-card {
     margin: 2%;
     display: inline-block;
