--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Community</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login" routerLinkActive="is-active">Login</a>
+      </li>
     </ul>
   </div>
-</nav>
+</nav> 
