--- a/src/app/request-reset/request-reset.component.html
+++ b/src/app/request-reset/request-reset.component.html
@@ -1,3 +1,28 @@
-<p>
-  request-reset works!
-</p>
+<div>
+  <div class="req_pw_container">
+    <div class="page_title">
+      <h1> Request new password </h1>
+    </div>
+    <form  [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+              <div *ngIf="f.email.errors.required">You have give an email</div>
+          </div>
+          <span class="text-danger" *ngIf="errorMessage">{{ errorMessage }}</span>
+      </div>
+      <div class="form-group">
+          <button [disabled]="loading" class="btn btn-dark">
+              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+              Send email
+          </button>
+      </div>
+    </form>
+    <div *ngIf="successEmailSent">
+      <span class="text-success">
+        Email sent!
+      </span>
+    </div>
+  </div>
+</div>
