--- a/src/app/response-reset/response-reset.component.html
+++ b/src/app/response-reset/response-reset.component.html
@@ -1,3 +1,39 @@
-<p>
-  response-reset works!
-</p>
+<div>
+  <div class="response_pw_container">
+    <div class="page_title">
+      <h1> Reset your password </h1>
+    </div>
+    <form  [formGroup]="pwResetForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">You have to give an email</div>
+        </div>
+        <span class="text-danger" *ngIf="errorMessage">The email doesn't exist!</span>
+      </div>
+      <div class="form-group">
+          <label for="password">New password</label>
+          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">You have to give a password</div>
+          </div>
+          <span class="text-danger" *ngIf="errorMessage">The passwords don't match!</span>
+      </div>
+      <div class="form-group">
+          <label for="password_confirmation">Confirm new password</label>
+          <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password_confirmation.errors }"/>
+          <div *ngIf="submitted && f.password_confirmation.errors" class="invalid-feedback">
+              <div *ngIf="f.password_confirmation.errors.required">You have to give a password</div>
+          </div>
+      </div>
+      <span class="text-danger" *ngIf="errorMessageEmailOrToken">{{ errorMessageEmailOrToken }}</span>
+      <div class="form-group">
+          <button [disabled]="loading" class="btn btn-dark">
+              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+              Submit
+          </button>
+      </div>
+  </form>
+  </div>
+</div>
