notifications and messages started

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="/ideas" routerLinkActive="is-active">Explore</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Community</a>
+        <a class="nav-link" routerLink="/community" routerLinkActive="is-active">Community</a>
       </li>
       <li class="nav-item" *ngIf="!loggedIn">
         <a class="nav-link" routerLink="/login" routerLinkActive="is-active">Login</a>
