--- a/src/app/others-profile/others-profile.component.html
+++ b/src/app/others-profile/others-profile.component.html
@@ -20,6 +20,11 @@
           {{ profileInfo.status }}
         </h4>
       </li>
+      <li>
+        <a mat-button [routerLink]="['../../message', profileInfo.id]" style="background-color: rgba(255, 255, 255, 0.322);">
+          Message
+        </a>
+      </li>
     </ul>
   </div>
 </div>
