--- a/src/app/others-profile/others-profile.component.scss
+++ b/src/app/others-profile/others-profile.component.scss
@@ -1,3 +1,12 @@
 .own_avatar{
     width: 40px;
 }
+
+.newMessageClass{
+    width: 40%;
+    padding: 2%;
+}
+
+.form-control{
+    margin-top: 2%;
+}
