--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -25,6 +25,33 @@
 <div class="content">
   <mat-card class="post-card" *ngFor="let post of postList" id="{{ post.id }}">
     <mat-card-header>
+      <div *ngIf="adminOrMod" class="adminDeleteDiv">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-light" data-toggle="modal" 
+        attr.data-target="#deleteConfirmModal-{{post.id}}">
+          x
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="deleteConfirmModal-{{post.id}}" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Delete post</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeButton-{{post.id}}">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this post?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-primary" (click)="deletePost(post.id, post.user_id)">Delete post</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
         <img mat-card-avatar class="post-header-image"
         src="http://www.prodbackend.com/img/{{post.user.avatar}}">
         <mat-card-title>
