--- a/src/app/others-profile/others-profile.component.html
+++ b/src/app/others-profile/others-profile.component.html
@@ -1,4 +1,31 @@
 <div class="profile_content">
+  <div *ngIf="adminOrMod && profileInfo && profileId!=userId && !profileInfo.is_banned" class="adminBanDiv">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-light" data-toggle="modal" 
+    attr.data-target="#banConfirmModal-{{profileInfo.id}}">
+      Ban user
+    </button>
+    <!-- Modal -->
+    <div class="modal fade" id="banConfirmModal-{{profileInfo.id}}" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ban user</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeButton-{{profileInfo.id}}">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to ban this user?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+            <button type="button" class="btn btn-primary" (click)="banUser(profileInfo.id)">Ban user</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="information_of_user" *ngIf="profileInfo">
     <ul>
       <li>
