--- a/src/app/post-comments/post-comments.component.html
+++ b/src/app/post-comments/post-comments.component.html
@@ -27,6 +27,33 @@
     <div *ngFor="let comment of commentList" id="{{ comment.id }}" class="individual_comment">
       <div class="comment_text">
         {{ comment.text }}
+        <div *ngIf="adminOrMod" class="adminDeleteDiv">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-light" data-toggle="modal" 
+          attr.data-target="#deleteConfirmModal-{{comment.id}}">
+            x
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="deleteConfirmModal-{{comment.id}}" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Delete comment</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeButton-{{comment.id}}">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Are you sure you want to delete this comment?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                  <button type="button" class="btn btn-primary" (click)="deleteComment(comment.id)">Delete comment</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="comment_date">
         {{ comment.updated_at }}
