--- a/src/app/ideas/ideas.component.scss
+++ b/src/app/ideas/ideas.component.scss
@@ -61,3 +61,17 @@
 .upvotedRating{
     color: green;
 }
+
+.categories-section{
+    margin: 2%;
+    padding: 2%;
+    background-color: rgba(255, 255, 255, 0.445);
+}
+
+.category{
+    margin: 1%;
+}
+
+.search_form{
+    margin: 2%;
+}
