--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,3 +1,12 @@
+<form [formGroup]="searchForm" (ngSubmit)="searchSubmit()" class="search_form form-inline text-center justify-content-center">
+  <div class="form-group">
+    <input id="searchInput" formControlName="searchInput" class="form-control mr-sm-2" 
+    type="search" placeholder="Search..." aria-label="Search">
+  </div>
+  <div class="form-group">
+    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Keresés</button>
+  </div>
+</form>
 <div class="newPostContainer">
   <button type="button" class="btn btn-primary" (click)="newPostButton()">New post</button>
   <form *ngIf="newPost" [formGroup]="newPostForm" (ngSubmit)="onSubmit()" class="newPostClass">
@@ -9,12 +18,26 @@
       <div *ngIf="submitted && f.postText.errors" class="invalid-feedback">
         <div *ngIf="f.postText.errors.required">You have to write a description</div>
       </div>
-      <input type="text" formControlName="postCategory" 
-            class="form-control" placeholder="Categories"
-            [ngClass]="{ 'is-invalid': submitted && f.postCategory.errors }"/>
-      <div *ngIf="submitted && f.postCategory.errors" class="invalid-feedback">
-        <div *ngIf="f.postCategory.errors.required">You have to give at least one category</div>
-      </div>
+      <section class="categories-section">
+        Choose categories: <br>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.general">general</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.book">book</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.web">web</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.programming">programming</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.marketing">marketing</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.advertising">advertising</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.content">content</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.blog">blog</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.design">design</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.event">event</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.platform">platform</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.education">education</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.finance">finance</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.health">health</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.entertainment">entertainment</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.sales">sales</mat-checkbox>
+        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.other">other</mat-checkbox>
+      </section>
     </div>
     <div class="form-group">
       <button class="btn btn-primary create_post">Create</button>
@@ -65,8 +88,8 @@
       <p>
         {{ (post.text.length > 200) ? (post.text | slice:0:200) + '...' : (post.text) }}
       </p>
-      <p class="categories">
-        {{ (post.category.length > 70) ? (post.category | slice:0:70) + '...' : (post.category) }}
+      <p class="categories" *ngFor="let category of post.categories">
+        {{ category.name }}&nbsp;
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -74,3 +97,18 @@
     </mat-card-actions>
   </mat-card>
 </div>
+<nav class="paginator" *ngIf="paginatorData">
+  <ul class="pagination">
+    <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
+      <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
+    </li>
+    <li class="page-item" 
+    *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
+    [ngClass]="{'active': paginatorData.current_page == i + 1}">
+      <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
+    </li>
+    <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
+      <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
+    </li>
+  </ul>
+</nav>
