--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -108,6 +108,9 @@
       <p>
         {{ (idea.description.length > 40) ? (idea.description | slice:0:40) + '...' : (idea.description) }}
       </p>
+      <p class="categories" *ngFor="let category of idea.categories">
+        {{ category.name }}&nbsp;
+      </p>
     </mat-card-content>
     <mat-card-actions>
       <div class="rating">
@@ -120,3 +123,18 @@
     </mat-card-actions>
   </mat-card>
 </div>
+<nav class="paginator" *ngIf="paginatorData">
+  <ul class="pagination">
+    <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
+      <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
+    </li>
+    <li class="page-item" 
+    *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
+    [ngClass]="{'active': paginatorData.current_page == i + 1}">
+      <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
+    </li>
+    <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
+      <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
+    </li>
+  </ul>
+</nav>
