--- a/src/app/response-reset/response-reset.component.scss
+++ b/src/app/response-reset/response-reset.component.scss
@@ -7,3 +7,32 @@
     background-color: rgba(255, 255, 255, 0.24);
     padding: 5%;
 }
+
+.page_title{
+    margin-bottom: 7%;
+}
+
+.response_form_group{
+    margin-top: 7%;
+}
+
+.custom_btn{
+    color: white;
+    border-color: #BA1D4C;
+    background-color: #BA1D4C;
+}
+
+.custom_btn:hover{
+    background-color: #97193f;
+    border-color: #97193f !important;
+}
+
+.custom_btn:active{
+    color: white;
+    border-color: #97193f !important;
+    background-color: #97193f !important;
+}
+
+.custom_btn:focus{
+    box-shadow: none !important;
+}
