--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,14 +1,17 @@
 <form [formGroup]="searchForm" (ngSubmit)="searchSubmit()" class="search_form form-inline text-center justify-content-center">
   <div class="form-group">
-    <input id="searchInput" formControlName="searchInput" class="form-control mr-sm-2" 
+    <input id="searchInput" formControlName="searchInput" class="form-control mr-sm-2 search_input_field" 
     type="search" placeholder="Search..." aria-label="Search">
   </div>
   <div class="form-group">
-    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Keresés</button>
+    <button class="btn btn-outline-info my-2 my-sm-0 custom_btn" type="submit">
+      <span *ngIf="searchLoading" class="spinner-border spinner-border-sm mr-1"></span>
+      Search
+    </button>
   </div>
 </form>
 <div class="newPostContainer">
-  <button type="button" class="btn btn-primary" (click)="newPostButton()">New post</button>
+  <button type="button" class="btn custom_btn new_button" (click)="newPostButton()">New post</button>
   <form *ngIf="newPost" [formGroup]="newPostForm" (ngSubmit)="onSubmit()" class="newPostClass">
     <div class="form-group">
       <textarea type="text" placeholder="Your post text" 
@@ -18,35 +21,44 @@
       <div *ngIf="submitted && f.postText.errors" class="invalid-feedback">
         <div *ngIf="f.postText.errors.required">You have to write a description</div>
       </div>
+      <div *ngIf="tooManyCharDescription" class="text-danger">
+        <div>The description must be less than 301 characters!</div>
+      </div>
       <section class="categories-section">
         Choose categories: <br>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.general">general</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.book">book</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.web">web</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.programming">programming</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.marketing">marketing</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.advertising">advertising</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.content">content</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.blog">blog</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.design">design</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.event">event</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.platform">platform</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.education">education</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.finance">finance</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.health">health</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.entertainment">entertainment</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.sales">sales</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.other">other</mat-checkbox>
+        <div class="categories_checkbox">
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.general">general</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.book">book</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.web">web</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.programming">programming</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.marketing">marketing</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.advertising">advertising</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.content">content</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.blog">blog</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.design">design</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.event">event</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.platform">platform</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.education">education</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.finance">finance</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.health">health</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.entertainment">entertainment</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.sales">sales</mat-checkbox>
+          <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.other">other</mat-checkbox>
+        </div>
       </section>
     </div>
     <div class="form-group">
-      <button class="btn btn-primary create_post">Create</button>
+      <button class="btn custom_btn new_button create_post">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        Create
+      </button>
     </div>
   </form>
 </div>
 
 <div class="content">
-  <mat-card class="post-card" *ngFor="let post of postList" id="{{ post.id }}">
+  <mat-spinner *ngIf="!postList"></mat-spinner>
+  <mat-card class="post-card break_words" *ngFor="let post of postList" id="{{ post.id }}">
     <mat-card-header>
       <div *ngIf="adminOrMod" class="adminDeleteDiv">
         <!-- Button trigger modal -->
@@ -93,7 +105,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <a mat-button [routerLink]="['./', post.id]">COMMENT</a>
+      <a mat-button [routerLink]="['./', post.id]">COMMENT ({{post.comments_count}})</a>
     </mat-card-actions>
   </mat-card>
 </div>
