--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -1,14 +1,17 @@
 <form [formGroup]="searchForm" (ngSubmit)="searchSubmit()" class="search_form form-inline text-center justify-content-center">
   <div class="form-group">
-    <input id="searchInput" formControlName="searchInput" class="form-control mr-sm-2" 
+    <input id="searchInput" formControlName="searchInput" class="form-control mr-sm-2 search_input_field" 
     type="search" placeholder="Search..." aria-label="Search">
   </div>
   <div class="form-group">
-    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Keresés</button>
+    <button class="btn btn-outline-info my-2 my-sm-0 custom_btn" type="submit">
+      <span *ngIf="searchLoading" class="spinner-border spinner-border-sm mr-1"></span>
+      Search
+    </button>
   </div>
 </form>
 <div class="newIdea">
-  <button type="button" class="btn btn-primary" (click)="postNewIdeaButton()">Post new idea</button>
+  <button type="button" class="btn custom_btn new_button" (click)="postNewIdeaButton()">Post new idea</button>
   <form *ngIf="postNewIdea" [formGroup]="newIdeaForm" (ngSubmit)="onSubmit()" class="newIdeaPostClass">
     <div class="form-group">
       <input type="text" formControlName="ideaTitle" 
@@ -24,26 +27,34 @@
       <div *ngIf="submitted && f.ideaDesc.errors" class="invalid-feedback">
         <div *ngIf="f.ideaDesc.errors.required">You have to give a description</div>
       </div>
+      <div *ngIf="tooManyCharTitle" class="text-danger">
+        <div>The title must be less than 51 characters!</div>
+      </div>
+      <div *ngIf="tooManyCharDescription" class="text-danger">
+        <div>The description must be less than 251 characters!</div>
+      </div>
       <section class="categories-section">
         Choose a category: <br>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.general">general</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.book">book</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.web">web</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.programming">programming</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.marketing">marketing</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.advertising">advertising</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.content">content</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.blog">blog</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.design">design</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.event">event</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.platform">platform</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.education">education</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.finance">finance</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.health">health</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.entertainment">entertainment</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.sales">sales</mat-checkbox>
-        <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.other">other</mat-checkbox>
-      </section>
+          <div class="categories_checkbox">
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.general">general</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.book">book</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.web">web</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.programming">programming</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.marketing">marketing</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.advertising">advertising</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.content">content</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.blog">blog</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.design">design</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.event">event</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.platform">platform</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.education">education</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.finance">finance</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.health">health</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.entertainment">entertainment</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.sales">sales</mat-checkbox>
+            <mat-checkbox class="category" [ngModelOptions]="{standalone: true}" [(ngModel)]="checkbox.other">other</mat-checkbox>  
+          </div>
+        </section>
     </div>
     <div class="upload_idea_pic">
       <p class="text_little">Upload a picture of your idea <br> (max 1MB)</p>
@@ -54,13 +65,17 @@
       </div>
     </div>
     <div class="form-group">
-      <button class="btn btn-primary create_post" (click)="createNewPostButton()">Create idea post</button>
+      <button class="btn create_post custom_btn new_button" (click)="createNewPostButton()">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        Create
+      </button>
     </div>
   </form>
 </div>
 
 <div class="content">
-  <mat-card class="idea-card" *ngFor="let idea of ideaList" id="{{ idea.id }}">
+  <mat-spinner *ngIf="!ideaList"></mat-spinner>
+  <mat-card class="idea-card break_words" *ngFor="let idea of ideaList" id="{{ idea.id }}">
     <mat-card-header>
       <div *ngIf="adminOrMod" class="adminDeleteDiv">
         <!-- Button trigger modal -->
@@ -119,7 +134,7 @@
           <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
       </div>
-      <a mat-button [routerLink]="['./', idea.id]">COMMENT</a>
+      <a mat-button [routerLink]="['./', idea.id]">COMMENT ({{idea.comments_count}})</a>
     </mat-card-actions>
   </mat-card>
 </div>
