--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,21 +1,34 @@
 .navbar{
-    background-color: rgba(255, 255, 255, 0.479) !important;
+    background-color: rgba(255, 255, 255, 0) !important;
     font-size: 1.2em;
-    font-family: 'Lalezar', cursive;
+    font-weight: bold;
     padding: 2%;
     padding-left: 3%;
     padding-right: 3%;
 }
 
 .nav-item{
-    background-color: rgba(66, 0, 36, 0.205);
-    margin-right: 50px;
-    width: 150px;
-    text-align: center;
+    margin-right: 30px;
 }
 
-.nav-item:hover{
-    background-color: #BA1D4C;
+.nav-link{
+    color: rgba(255, 255, 255, 0.589) !important;
+}
+
+.nav-link:hover{
+    color: rgba(255, 255, 255, 0.849) !important;
+}
+
+.navbar-brand{
+    color: white;
+}
+
+.navbar-brand:hover{
+    color: white;
+}
+
+.navbar-brand:focus{
+    color: white;
 }
 
 .navbar-brand{
@@ -25,10 +38,8 @@
 
 .productivera_logo{
     width: 40px;
-    margin-left: 50px;
 }
 
 .is-active{
-    background-color: #b4375d;
-    color: black !important;
+    color: white !important;
 }
