--- a/src/app/post-comments/post-comments.component.html
+++ b/src/app/post-comments/post-comments.component.html
@@ -1,11 +1,12 @@
 <div class="content">
-  <div class="post_title">
+  <div class="post_title break_words">
+    <mat-spinner *ngIf="!post"></mat-spinner>
     <h2 *ngIf="post">
       {{ post.text }}
     </h2>
   </div>
   <div class="new_comment">
-    <button type="button" class="btn btn-primary" (click)="newCommentButton()">Write a new comment</button>
+    <button type="button" class="btn new_button" (click)="newCommentButton()">Write a new comment</button>
     <form *ngIf="newComment" [formGroup]="newCommentForm" (ngSubmit)="onSubmit()" class="newCommentClass">
       <div class="form-group">
         <textarea type="text" placeholder="Your comment" 
@@ -15,16 +16,23 @@
           <div *ngIf="f.commentText.errors.required">You can't submit an empty comment</div>
         </div>
       </div>
+      <div *ngIf="tooManyCharComment" class="text-danger">
+        <div>The comment must be less than 301 characters!</div>
+      </div>
       <div class="form-group">
-        <button class="btn btn-primary create_comment">Send comment</button>
+        <button class="btn new_button create_comment">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+          Send
+        </button>
       </div>
     </form>
   </div>
   <div class="comments_content">
-    <h2>
-      Comments
+    <h2 *ngIf="commentList" class="comments_h2">
+      Comments ({{commentList.length}})
     </h2>
-    <div *ngFor="let comment of commentList" id="{{ comment.id }}" class="individual_comment">
+    <mat-spinner *ngIf="!commentList"></mat-spinner>
+    <div *ngFor="let comment of commentList" id="{{ comment.id }}" class="individual_comment break_words">
       <div class="comment_text">
         {{ comment.text }}
         <div *ngIf="adminOrMod" class="adminDeleteDiv">
@@ -54,15 +62,16 @@
             </div>
           </div>
         </div>
+        <div class="comment_date">
+          {{ comment.updated_at }}
+        </div>
+        <div class="comment_owner">
+          <a [routerLink]="['../../profile', comment.user.id]">
+            {{ comment.user.username }}
+          </a>
+        </div>
       </div>
-      <div class="comment_date">
-        {{ comment.updated_at }}
-      </div>
-      <div class="comment_owner">
-        <a [routerLink]="['../../profile', comment.user.id]">
-          {{ comment.user.username }}
-        </a>
-      </div>
+      <mat-divider></mat-divider>
     </div>
   </div>
 </div>
