--- a/src/app/request-reset/request-reset.component.html
+++ b/src/app/request-reset/request-reset.component.html
@@ -13,7 +13,7 @@
           <span class="text-danger" *ngIf="errorMessage">{{ errorMessage }}</span>
       </div>
       <div class="form-group">
-          <button [disabled]="loading" class="btn btn-dark">
+          <button [disabled]="loading" class="btn custom_btn">
               <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
               Send email
           </button>
