--- a/src/app/response-reset/response-reset.component.html
+++ b/src/app/response-reset/response-reset.component.html
@@ -10,7 +10,7 @@
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
             <div *ngIf="f.email.errors.required">You have to give an email</div>
         </div>
-        <span class="text-danger" *ngIf="errorMessage">The email doesn't exist!</span>
+        <span class="text-danger" *ngIf="errorMessage">{{errorMessage.email}}</span>
       </div>
       <div class="form-group">
           <label for="password">New password</label>
@@ -18,7 +18,7 @@
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
               <div *ngIf="f.password.errors.required">You have to give a password</div>
           </div>
-          <span class="text-danger" *ngIf="errorMessage">The passwords don't match!</span>
+          <span class="text-danger" *ngIf="errorMessage">{{errorMessage.password}}</span>
       </div>
       <div class="form-group">
           <label for="password_confirmation">Confirm new password</label>
@@ -28,8 +28,8 @@
           </div>
       </div>
       <span class="text-danger" *ngIf="errorMessageEmailOrToken">{{ errorMessageEmailOrToken }}</span>
-      <div class="form-group">
-          <button [disabled]="loading" class="btn btn-dark">
+      <div class="form-group response_form_group">
+          <button [disabled]="loading" class="btn custom_btn">
               <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
               Submit
           </button>
