--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,9 +10,9 @@
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                 <div *ngIf="f.email.errors.required">You have to give an email</div>
             </div>
-            <span class="text-danger" *ngIf="errorMessage">This email is already taken</span>
+            <span class="text-danger" *ngIf="errorMessage">{{errorMessage.email}}</span>
             <div *ngIf="tooManyCharEmail" class="text-danger">
-                <div>The email has to be less than 28 characters</div>
+                <div>The email has to be less than 31 characters</div>
             </div>
         </div>
         <div class="form-group">
@@ -22,8 +22,15 @@
                 <div *ngIf="f.username.errors.required">You have to give a username</div>
             </div>
             <div *ngIf="tooManyCharUsername" class="text-danger">
-                <div>The username has to be less than 28 characters</div>
+                <div>The username has to be less than 31 characters</div>
             </div>
+        </div>
+        <div class="form-group">
+          <label for="country">Country</label>
+          <select class="form-control" formControlName="country">
+            <option>Choose a country...</option>
+            <option *ngFor="let country of countryList">{{ country.name }}</option>
+          </select>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
@@ -31,7 +38,7 @@
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                 <div *ngIf="f.password.errors.required">You have to give a password</div>
             </div>
-            <span class="text-danger" *ngIf="errorMessage">The password is not acceptable</span>
+            <span class="text-danger" *ngIf="errorMessage">{{errorMessage.password}}</span>
         </div>
         <div class="form-group">
             <label for="password_confirmation">Confirm password</label>
@@ -40,8 +47,8 @@
                 <div *ngIf="f.password_confirmation.errors.required">You have to give a password</div>
             </div>
         </div>
-        <div class="form-group">
-            <button [disabled]="loading" class="btn btn-dark btn-block">
+        <div class="form-group signup_form_group">
+            <button [disabled]="loading" class="btn btn-block custom_btn">
                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                 Sign up
             </button>
