--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,12 +7,12 @@
 }*/
 
 // Colors
-$bg-color: rgb(58, 0, 32);
-$dot-color: rgb(136, 136, 136);
+$bg-color: rgb(68, 0, 37);
+$dot-color: rgb(87, 87, 87);
 
 // Dimensions
 $dot-size: 1px;
-$dot-space: 22px;
+$dot-space: 30px;
 
 body {
 	background:
@@ -21,4 +21,7 @@ body {
 		$dot-color;
     background-size: $dot-space $dot-space;
     color: rgb(255, 255, 255);
+}
+*{
+    font-family: 'Montserrat', sans-serif;
 }
